# aligning-genealogies

./: .gitignore  .gitmodules  .travis.yml  Pipfile  makefile  pyproject.toml  readme.md  requirements.txt  run-tests.sh  simulate.py
Loopy Belief Propagation/: BP.ipynb  LoopyBP.ipynb  TheoryForLBP.ipynb
data/: balsac.tsv  geneaJi.tsv  kinship2_sample1_ped.tsv  simple.tsv  simple_gen.txt  wf_ped_1000probands_0_2_growthrate.txt
data/samples/: sample1.csv  sample2.csv  sample3.csv  sample4.csv
data/test/: disconnected.tsv  inbreeding.tsv  intergenerational.tsv  loop.tsv  loop_2.tsv  loop_3.tsv  loop_4.tsv  (+7 more)
doc/: project_structure.md
genealogy_aligner/: ARG.py  Aligner.py  BeliefPropagation.py  Climber.py  DiploidGraph.py  Drawing.py  Evaluation.py  Experiments.ipynb  FactorGraph.py  Genealogical.py  Genealogy.py  Haplotype.py  HaplotypeGraph.py  Inference.py  Infering.py  Pedigree.py  Traversal.py  __init__.py  align_example.py  alignment.py  class_example.py  coal_example.py  evaluation.py  greedy_alignment.py  kinship.py  mat_align.py  msprime_example.py  shortest_path_example.py  utils.py
notebooks/: .ipynb  BalsacExperiments1.ipynb  BeliefPropagation.ipynb  Experiments.ipynb  RandomPedigreeExample.ipynb  Tree sequence alignment.ipynb  genealogy_aligner
scripts/: agent_alignment.py  agent_example.py  alignment_example.py  class_example.py  kinship.py  msprime_example.py  recalc_example.py  util.py
src/: Experiments.ipynb  coal_example.py  kinship.py  simulate.py  utils.py
test/: test_Climber.py  test_Pedigree.py  test_Traversal.py  test_genealogy.py
(+5 files in other folders)
