[tool.poetry]
name = "genealogies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
networkx = "^2.4"
matplotlib = "^3.2.1"
pygraphviz = "^1.5"
pandas = "^1.0.3"
tqdm = "^4.46.0"
newick = "^1.0.0"
scipy = "^1.4.1"
sphinx = "^3.0.4"
gensim = "^3.8.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
